Added shared lib target, plus install rules

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -14,6 +14,8 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
+CMAKE_MINIMUM_REQUIRED(VERSION 2.4.6)
  
 # set library name
 SET(LIB_NAME Karto)
@@ -66,3 +68,22 @@ ADD_LIBRARY(${LIB_NAME}
   ${HEADER_FILES}
   ${SOURCE_FILES}
 )
+# Also build a shared version of the library
+ADD_LIBRARY(${LIB_NAME}-shared SHARED
+  ${KARTO_LIB_TYPE}
+  ${HEADER_FILES}
+  ${SOURCE_FILES}
+)
+# Prevent deletion of existing lib of same name
+SET_TARGET_PROPERTIES(${LIB_NAME}-shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+# Set output name to be the same as shared lib (may not work on
+# Windows)
+SET_TARGET_PROPERTIES(${LIB_NAME}-shared PROPERTIES OUTPUT_NAME ${LIB_NAME})
+
+# Install libraries and header(s)
+INSTALL(TARGETS ${LIB_NAME}
+        ARCHIVE DESTINATION "lib")
+INSTALL(TARGETS ${LIB_NAME}-shared
+        LIBRARY DESTINATION "lib")
+INSTALL(FILES kt_Mapper.h kt_Types.h
+        DESTINATION "include/karto")
