--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -46,7 +46,14 @@ include_directories(../source)
 ############################################################################
 # tutorial 2
 
+message(STATUS "HELLO")
+message(STATUS ${KartoOpenSource_SOURCE_DIR})
+include_directories(${KartoOpenSource_SOURCE_DIR}/3rdParty/CSparse/Include)
 include_directories(${KartoOpenSource_SOURCE_DIR}/3rdParty/sba/include)
+include_directories(${KartoOpenSource_SOURCE_DIR}/3rdParty/eigen)
+#include_directories(/Users/bensonl/karto/sdk/3rdParty/eigen)
+#include_directories(/Users/bensonl/karto/sdk/3rdParty/CSparse/Include)
+#include_directories(/Users/bensonl/karto/sdk/3rdParty/sba/include)
 
 add_executable(
   Karto_Tutorial2
