changed package name to open_karto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 2.8)
 set(KARTO_LIB_TYPE SHARED)
 add_subdirectory(source)
 
-install(FILES package.xml DESTINATION share/OpenKarto)
+install(FILES package.xml DESTINATION share/open_karto)
