making the package compilable in a catkin workspace

--- a/package.xml
+++ b/package.xml
@@ -8,9 +8,6 @@
   <license>LGPLv3</license>
 
   <run_depend>catkin</run_depend>
-  <buildtool_depend>cmake</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
 
-  <export>
-    <build_type>cmake</build_type>
-  </export>
 </package>
