--- a/package.xml
+++ b/package.xml
@@ -8,4 +8,9 @@
   <license>LGPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>boost</build_depend>
+
+  <run_depend>boost</run_depend>
+
 </package>
