--- a/package.xml
+++ b/package.xml
@@ -2,9 +2,9 @@
 <package>
   <name>open_karto</name>
   <version>1.0.1</version>
-  <description>Release-package for OpenKarto</description>
+  <description>Catkinized ROS packaging of the OpenKarto library</description>
 
-  <maintainer email="swirth@willowgarage.com">Stephan Wirth</maintainer>
+  <maintainer email="fergs@unboundedrobotics.com">Michael Ferguson</maintainer>
   <license>LGPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
