--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,7 @@
   <description>Catkinized ROS packaging of the OpenKarto library</description>
 
   <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
+  <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
   <license>LGPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
