--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(open_karto)
 
 find_package(catkin REQUIRED)
-
+find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread)
 
 catkin_package(
@@ -13,7 +13,9 @@ catkin_package(
     karto
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+add_definitions(${EIGEN3_DEFINITIONS})
+
+include_directories(include ${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
 add_library(karto SHARED src/Karto.cpp src/Mapper.cpp)
 target_link_libraries(karto ${Boost_LIBRARIES})
 
