--- a/package.xml
+++ b/package.xml
@@ -4,8 +4,10 @@
   <version>1.1.4</version>
   <description>Catkinized ROS packaging of the OpenKarto library</description>
 
-  <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
+  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
+  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
   <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
+
   <license>LGPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
