--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,3 @@
-# language: python
-
-# matrix:
-#   include:
-#     - sudo: required
-#       services:
-#         - docker
-#       env: PIP=pip
-#     - os: osx
-#       language: generic
-#       env: PIP=pip2
-
-# script:
-#   - $PIP install cibuildwheel==0.10.0
-#   - CIBW_BEFORE_BUILD="yum install boost-devel eigen3-devel.noarch -y && pip install pybind11" cibuildwheel --output-dir wheelhouse
 language: python
 
 matrix:
@@ -20,10 +5,14 @@ matrix:
     - sudo: required
       services:
         - docker
-      env: PIP=pip
+      env:
+        - PIP=pip
+        - CIBW_MANYLINUX1_X86_64_IMAGE=safijari/manylinux-x64
+        - CIBW_PLATFORM=linux
+        - CIBW_SKIP="*-manylinux1_i686"
+        - CIBW_ENVIRONMENT_LINUX="COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG"
 
 script:
-  - sudo $PIP install cibuildwheel==0.10.0
   - $PIP install cibuildwheel==0.10.0
-  - CIBW_MANYLINUX1_X86_64_IMAGE=safijari/manylinux-x64 CIBW_PLATFORM=linux CIBW_SKIP="*-manylinux1_i686" CIBW_ENVIRONMENT_LINUX="COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG" cibuildwheel --output-dir wheelhouse
+  - cibuildwheel --output-dir wheelhouse
   - ls wheelhouse
