--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
         - CIBW_PLATFORM=linux
         - CIBW_SKIP="*-manylinux1_i686"
         - CIBW_ENVIRONMENT_LINUX="COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG"
+        - CIBW_BEFORE="pip install pybind11"
 
 script:
   - $PIP install cibuildwheel==0.10.0
