Changing maintainer email

--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
 
   <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
   <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
-  <maintainer email="lbettaieb@fetchrobotics.com">Luc Bettaieb</maintainer>
+  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
 
   <license>LGPLv3</license>
 
