--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(open_karto)
 
-find_package(catkin REQUIRED)
-
+find_package(catkin REQUIRED
+  COMPONENTS
+    sparse_bundle_adjustment
+)
+find_package(Eigen3 REQUIRED)
+#find_package(CSparse REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread)
 
 catkin_package(
+  CATKIN_DEPENDS
+    sparse_bundle_adjustment
   DEPENDS Boost
   INCLUDE_DIRS
     include
