--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,5 @@ install(TARGETS karto
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
 )
+
+include(samples/CMakeLists.txt)
