--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,9 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>boost</build_depend>
+  <build_depend>sparse_bundle_adjustment</build_depend>
 
   <run_depend>boost</run_depend>
+  <run_depend>sparse_bundle_adjustment</run_depend>
 
 </package>
